# leetcode-scraper

./: .env.example  .gitignore  Dockerfile  README.md  compose.yml  docker-compose.yml  main.py  pyproject.toml  scrap.py
.github/: README.md
.github/workflows/: python-pytests.yml
database/: database.py
leetcode/: leetcode.py  problem.py  study_plan.py  user.py
leetcode/api/: auth.py  client.py  configuration.py
scripts/: entrypoint.sh
tests/: test_database.py  test_leetcode.py
